--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="four card feature component">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="./stylesheets/general.css">
+  <link rel="stylesheet" type="text/css" href="./stylesheets/four-card-component.css">
+  <link rel="stylesheet" type="text/css" href="./stylesheets/utility.css">
   <link rel="stylesheet" type="text/css" href="./stylesheets/attribution.css">
   <title>Frontend Mentor | Four card feature section</title>
 </head>
@@ -13,7 +15,7 @@
   <main>
     <h1 class="hidden">Four card feature section</h1>
     <section class="four-card-feature-component">
-      <h2 class="section-title">
+      <h2 class="section-title light-bold">
         Reliable, efficient delivery
         <span class="bold">Powered by Technology</span>
       </h2>
@@ -24,34 +26,38 @@
 
       <ul class="feature-list" aria-label="Feature list">
         <li>
-          <article class="feature-list-item">
-            <h3 class="feature-list-item-header">Supervisor</h3>
-            <p class="feature-list-item-description">Monitors activity to identify project roadblocks</p>    
-            <img class="feature-list-item-icon" src="./images/icon-supervisor.svg" alt="" aria-hidden="true">
+          <article class="feature-item">
+            <div class="bar bg-cyan"></div>
+            <h3 class="feature-item-header bold">Supervisor</h3>
+            <p class="feature-item-description">Monitors activity to identify project roadblocks</p>    
+            <img class="feature-item-icon" src="./images/icon-supervisor.svg" alt="" aria-hidden="true">
           </article>
         </li>
 
         <li>
-          <article class="feature-list-item">
-            <h3 class="feature-list-item-header">Team Builder</h3>
-            <p class="feature-list-item-description">Scans our talent network to create the optimal team for your project</p>
-            <img class="feature-list-item-icon" src="./images/icon-team-builder.svg" alt="" aria-hidden="true">
+          <article class="feature-item">
+            <div class="bar bg-red"></div>
+            <h3 class="feature-item-header bold">Team Builder</h3>
+            <p class="feature-item-description">Scans our talent network to create the optimal team for your project</p>
+            <img class="feature-item-icon" src="./images/icon-team-builder.svg" alt="" aria-hidden="true">
           </article>
         </li>
 
         <li>
-          <article class="feature-list-item">
-            <h3 class="feature-list-item-header">Karma</h3>
-            <p class="feature-list-item-description">Regularly evaluates our talent to ensure quality</p>
-            <img class="feature-list-item-icon" src="./images/icon-karma.svg" alt="" aria-hidden="true">
+          <article class="feature-item">
+            <div class="bar bg-orange"></div>
+            <h3 class="feature-item-header bold">Karma</h3>
+            <p class="feature-item-description">Regularly evaluates our talent to ensure quality</p>
+            <img class="feature-item-icon" src="./images/icon-karma.svg" alt="" aria-hidden="true">
           </article>
         </li>
 
         <li>
-          <article class="feature-list-item">
-            <h3 class="feature-list-item-header">Calculator</h3>
-            <p class="feature-list-item-description">Uses data from past projects to provide better delivery estimates</p>
-            <img class="feature-list-item-icon" src="./images/icon-calculator.svg" alt="" aria-hidden="true">
+          <article class="feature-item">
+            <div class="bar bg-blue bold"></div>
+            <h3 class="feature-item-header">Calculator</h3>
+            <p class="feature-item-description">Uses data from past projects to provide better delivery estimates</p>
+            <img class="feature-item-icon" src="./images/icon-calculator.svg" alt="" aria-hidden="true">
           </article>
         </li>
       </ul>
