Added/Updated: four-card-component.css index.html
In this commit:
- Updated index.html: Fixed the placement of the "bold" class in the 4th feature item.
- Added/Updated four-card-component.css: Implemented the mobile and desktop design.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <li>
           <article class="feature-item">
-            <div class="bar bg-blue bold"></div>
-            <h3 class="feature-item-header">Calculator</h3>
+            <div class="bar bg-blue"></div>
+            <h3 class="feature-item-header bold">Calculator</h3>
             <p class="feature-item-description">Uses data from past projects to provide better delivery estimates</p>
             <img class="feature-item-icon" src="./images/icon-calculator.svg" alt="" aria-hidden="true">
           </article>
