Updated: index.html
In this commit:
- Updated index.html: Improve the semantic structure of the code by hiding the bars of the feature items from screen readers.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul class="feature-list" aria-label="Feature list">
         <li>
           <article class="feature-item">
-            <div class="bar bg-cyan"></div>
+            <div class="bar bg-cyan" aria-hidden="true"></div>
             <h3 class="feature-item-header bold">Supervisor</h3>
             <p class="feature-item-description">Monitors activity to identify project roadblocks</p>    
             <img class="feature-item-icon" src="./images/icon-supervisor.svg" alt="" aria-hidden="true">
@@ -36,7 +36,7 @@
 
         <li>
           <article class="feature-item">
-            <div class="bar bg-red"></div>
+            <div class="bar bg-red" aria-hidden="true"></div>
             <h3 class="feature-item-header bold">Team Builder</h3>
             <p class="feature-item-description">Scans our talent network to create the optimal team for your project</p>
             <img class="feature-item-icon" src="./images/icon-team-builder.svg" alt="" aria-hidden="true">
@@ -45,7 +45,7 @@
 
         <li>
           <article class="feature-item">
-            <div class="bar bg-orange"></div>
+            <div class="bar bg-orange" aria-hidden="true"></div>
             <h3 class="feature-item-header bold">Karma</h3>
             <p class="feature-item-description">Regularly evaluates our talent to ensure quality</p>
             <img class="feature-item-icon" src="./images/icon-karma.svg" alt="" aria-hidden="true">
@@ -54,7 +54,7 @@
 
         <li>
           <article class="feature-item">
-            <div class="bar bg-blue"></div>
+            <div class="bar bg-blue" aria-hidden="true"></div>
             <h3 class="feature-item-header bold">Calculator</h3>
             <p class="feature-item-description">Uses data from past projects to provide better delivery estimates</p>
             <img class="feature-item-icon" src="./images/icon-calculator.svg" alt="" aria-hidden="true">
